assets/css/styles.css
/* ... */
        #dashboard .chart-header .actions-nav li:last-child {
          padding-right: 12px; }
        #dashboard .chart-header .actions-nav li a {
          color: #5c5c5c; }
          #dashboard .chart-header .actions-nav li a:hover {
            text-decoration: none;
            color: orangered; }
  #dashboard h4 {
    text-transform: uppercase;
    margin-right: 15px;
    margin-top: 40px;
    font-size: 23px;
    letter-spacing: -1px; }
  #dashboard .chart-nav {
    background-color: whitesmoke;
    border-radius: 4px;
    padding-bottom: 40px; }
    #dashboard .chart-nav .divider {
      border-bottom: 2px dotted #E4E4E4;
      padding-bottom: 20px; }
    #dashboard .chart-nav .nav > li > a:hover, #dashboard .chart-nav .nav > li > a:focus {
      color: orangered; }
  #dashboard .nav-pills>li>a.active  {
    background-color: orangered;
    color: #eeeeee; }
  #dashboard .nav-pills>li>a:hover  {
    color: orangered; }
  #dashboard .nav-pills>li>a.active:hover {
    color: #eeeeee;
  }
  .navbar-nav>li {
    margin-bottom: 4px;
  }
  .dropdown-menu li {
    margin-bottom: 10px;
  }

  #dashboard .summary-header {
    background-color: white;
    background-image: none;
    border-bottom: none;
    padding: 0 30px;
  }

  .summary-header h2 {
    font-size: 35px;
    color: dimgrey;
    letter-spacing: -1px;
    border-bottom: 1px solid lightgrey;
    padding-bottom: 7px;
    margin-bottom: 42px;
  }

  .summary-header h5 a {
    font-family: "museo-sans-rounded", Lucida Grande, Gill Sans, Arial, sans-serif;
    font-size: 21px;
    margin-top: 21px;
    margin-bottom: 7px;
    font-weight: 500;
  }

  .summary-header h5 {
    margin-top: 7px;
  }

  .summary-header a.chart {
    display: table-cell;
    height: 175px;
    vertical-align: middle;
  }

  .summary-header a.chart:hover {

  }

  .summary-header img {
    display: inline-block;
    vertical-align: middle;
  }

  .summary-header p {
    font-size: 14px;
    margin-bottom: 49px;
  }

  #export-data {
    padding: 40px 0;
  }

  #export-data a {
    margin-right: 20px;
  }

  #account-settings {
    padding: 30px 0;
  }

  /* ===============Modal Styles=============== */
  .modal-content {
    background-color: #272727;
  }

  .modal-dialog {
    width: 582px;
  }

  .modal.in .modal-dialog {
    -webkit-transform: translate(0, 50%);
    -ms-transform: translate(0, 50%);
    transform: translate(0, 50%);
  }

  /* ===============KendoUI Common Styles=============== */
  .add-record {
    background: #f5f8ff;
    padding: 12px 0;
  }

  .add-record a {
    padding: 10px;
    font-size: 14px;
  }

  /* ===============About Us Styles=============== */
  ul.staff {
    padding: 0;
  }

  .staff li,   .staff li a {
    font-family: "museo-sans-rounded", Lucida Grande, Gill Sans, Arial, sans-serif;
    list-style: none;
    font-size: 75%;
    margin-bottom: 0;
    line-height: 21px;
  }

  .staff li a {
    font-size: 100%;
    color: #4d9016;
  }

  .circle-graphic {
    background: url(../img/circle-graphic.png) no-repeat top 50px right 50px;
  }

  .lineage {
    border-bottom: 3px solid rgb(231, 231, 231);
    position: absolute;
    top: 50%;
    width: 80px;
  }

/* ===============Videos and Webinars=============== */

.video-thumbnail  {
  margin-bottom: 10px;
}

/* ===============Contact Page=============== */
#wufoo-r1nsuxzg0jz7b10 {
  margin-top: 35px;
  margin-bottom: 10px;
}

/* ===============Helper Styles=============== */

.registered {
  font-size: .6em;
  vertical-align: 0.6em; }

.is-portrait-message {
  display: none; }

@media screen and (max-width: 480px) and (orientation: portrait) {
  .portrait-is-hidden div,  .portrait-is-hidden footer {
    display: none; }
  .portrait-is-hidden .is-portrait-message {
    display: block;
    text-align: center;
    padding: 20% 0; } }

